--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ Pillow==9.4.0
 plotly==5.11.0
 plotly-express==0.4.1
 proto-plus==1.22.1
-protobuf==3.20.3
+protobuf
 pyarrow==10.0.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
