--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ data/.DS_Store
 data/processed/dexa_nhanes.csv
 data/final/dexa_nhanes_cleaned.csv
 firebase-fitlab-key.json
+notebooks/.ipynb_checkpoints
+data/final/fitlab_data.csv
